# regextools-api

./: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE  deps.bzl  nlohmann_json.BUILD  requirements_lock.txt  run-exp.py  tabulate_sizes.py  wsq.BUILD
.ijwb/: .bazelproject
clustering/cluster-tool/: BUILD.bazel  main.cc
clustering/filter/: BUILD.bazel  arg_parser.cc  arg_parser.h  main.cc
clustering/mcl-clustering/: BUILD.bazel  ThreadPool.h  cluster_set.cc  cluster_set.h  clustering_main.cc  mcl_wrapper.cc  mcl_wrapper.h  program_options.cc  program_options.h
clustering/mcl-clustering-v2/: BUILD.bazel  main.cc  rex_wrapper.cc  rex_wrapper.h  string_file_registry.cc  string_file_registry.h
clustering/mcl-clustering-v2/better_similarity_table/: BUILD.bazel  rex_similarity_scorer.cc  rex_similarity_scorer.h  similarity_table.h
clustering/mcl-clustering/better_similarity_table/: BUILD.bazel  rex_similarity_scorer.cc  rex_similarity_scorer.h  similarity_table.h
clustering/mcl-clustering/similarity_table/: BUILD.bazel  base_similarity_scorer.cc  base_similarity_scorer.h  egret_similarity_scorer.cc  egret_similarity_scorer.h  rex_similarity_scorer.cc  rex_similarity_scorer.h  similarity_table.cc  similarity_table.h
clustering/rex-string-generator/: BUILD.bazel  main.cc  rex_wrapper.cc  rex_wrapper.h
clustering/similarity-table/: BUILD.bazel  main.cc  regex_entity.cc  regex_entity.h  similarity_table.cc  similarity_table.h
dfacover/: BUILD.bazel  DfaCoverageServer.java  DfaCoverageServiceImpl.java  DfaCoverageServiceMain.java
evaluation/: BUILD.bazel  main.cc  regex_entity.h  use_case.cc  use_case.h
librereuse/: BUILD
librereuse/db/: BUILD.bazel  cluster.cc  cluster.h  parallel_regex_cluster_repository.cc  parallel_regex_cluster_repository.h  pattern_reader.cc  pattern_reader.h  regex_cluster_repository.cc  regex_cluster_repository.h  regex_entity.cc  regex_entity.h  regex_repository.cc  regex_repository.h
librereuse/query/: BUILD.bazel  abstract_score.h  base_cluster_query.h  base_regex_query.cc  base_regex_query.h  cluster_match_query.cc  cluster_match_query.h  fuzzy_cluster_query.cc  fuzzy_cluster_query.h  match_query.cc  match_query.h  miss_score.cc  miss_score.h  query_report.cc  query_report.h
librereuse/query/test/: BUILD.bazel  cluster_match_query_live_test.cc  cluster_match_query_test.cc
librereuse/util/: BUILD.bazel  bitmap.cc  bitmap.h  chunk.h  csv.cc  csv.h  is_iterable.h  ndjson.h  stats.h
librereuse/util/test/: BUILD.bazel  bitmap_test.cc  chunk_test.cc
misc/: BUILD.bazel  ThreadPool.h  cache_test.cc  full_dfa.cc  randomize_clusters.cc
performance/: BUILD.bazel  arg_parser.cc  arg_parser.h  benchmarking_report.cc  benchmarking_report.h  main.cc  query_report.cc  query_report.h  report.cc  report.h
performance/memory/: BUILD.bazel  full_dfa.cc  malloc_info_parser.cc  malloc_info_parser.h  memory_report.cc  memory_report.h  random_repo.cc  semantic_repo.cc  serial_repo.cc
proto/: BUILD  dfa_cover_service.proto  query_service.grpc.pb.cc  query_service.grpc.pb.h  query_service.pb.cc  query_service.pb.h  query_service.proto  query_service_pb.js  query_service_pb2.py  query_service_pb2_grpc.py
regexdb/: BUILD  main.cc  query_service.cc  query_service.h
reports/: BUILD.bazel  full-memory-hist.py  requirements.in  small-memory-hist.py
server/: BUILD  BUILD.bazel  chunk.go  cover_handler.go  dfa_cover_client.go  go.mod  go.sum  main.go  paging.go  participant_tracking.go  query_handler.go  regex_db.go  regexdb_client.go
server/db/: BUILD.bazel  migrator.go
