cc_binary(
    name = "benchmark",
    srcs = [
        "arg_parser.cc",
        "arg_parser.h",
        "main.cc",
        "query_report.cc",
        "query_report.h",
        "report.cc",
        "report.h",
    ],
    deps = [
        "//librereuse:rereuse",
        "@com_gabime_spdlog//:spdlog",
    ],
)
