filegroup(
    name = "args_parser_utils",
    srcs = [
        "arg_parser.cc",
        "arg_parser.h",
    ],
    visibility = [
        "//visibility:public",
    ],
)

cc_binary(
    name = "benchmark",
    srcs = [
        "main.cc",
        "query_report.cc",
        "query_report.h",
        ":args_parser_utils",
    ],
    deps = [
        "//librereuse:rereuse",
        "@com_gabime_spdlog//:spdlog",
    ],
)
