filegroup(
    name = "args_parser_utils",
    srcs = [
        "arg_parser.cc",
        "arg_parser.h",
    ],
    visibility = [
        "//visibility:public",
    ],
)

cc_binary(
    name = "benchmark",
    srcs = [
        "benchmarking_report.cc",
        "benchmarking_report.h",
        "main.cc",
        ":args_parser_utils",
    ],
    deps = [
        "//librereuse:rereuse",
        "@com_gabime_spdlog//:spdlog",
    ],
)
