load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "server_lib",
    srcs = [
        "main.go",
        "query_handler.go",
        "regexdb_client.go",
    ],
    importpath = "github.com/softwaresale/regextools-server/server",
    visibility = ["//visibility:private"],
    deps = [
        "//proto:query_service_go_proto",
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_gin_gonic_gin//:gin",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_x_net//context",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    embed = [":server_lib"],
)

# container_push(
#     name = "image-push",
#     format = "Docker",
#     image = ":image",
#     registry = "index.docker.io",
#     repository = "softwaresale/regextools-server",
# )
