cc_binary(
    name = "mcl-clustering",
    srcs = glob([
        "*.cc",
        "*.h",
    ]) + [
        "//clustering/mcl-clustering/similarity_table:similarity_table_sources",
    ],
    deps = [
        "//librereuse:rereuse",
        "@com_github_dualitylab_egret//src:egret-lib",
        "@com_github_nlohmann_json//:json",
        "@com_googlesource_code_re2//:re2",
    ],
)
