cc_test(
    name = "bitmap-test",
    srcs = ["bitmap_test.cc"],
    deps = [
        "//librereuse:rereuse",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "chunk-test",
    srcs = ["chunk_test.cc"],
    deps = [
        "//librereuse:rereuse",
        "@com_google_googletest//:gtest_main",
    ],
)
